@@ -255,7 +255,6 @@ AC_STDC_HEADERS
 AM_PROG_LIBTOOL
 AM_SANITY_CHECK
 
-GNOME_PLATFORM_GNOME_2(yes)
 GNOME_COMPILE_WARNINGS(maximum)
 
 dnl ***************
