@@ -1,3 +1,8 @@
+2003-04-20  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
+
+	* gdl/gdl-dock-master.c (gdl_dock_master_drag_motion): Plugged a
+	memory leak.
+	
 2003-04-05  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* configure.in: Added "ja" to ALL_LINGUAS.
